07 January 2005 Sylvain Pion
- Doc : missing \\

--------------------------------- CGAL 3.1 --------------------------

19 December 2004 Sylvain Pion
- Fix example_tds when -DNDEBUG.

1 December 2004 Sylvain Pion
- doc [ref] : add separator for Links to the Reference Sections.

16 November 2004 Sylvain Pion
- Comment out Regular::remove() documentation, as it's not ready.
- Comment out Christophe's acknowledgement, for the same reason.
- Remove Andreas from the main authors list.

9 November 2004 Sylvain Pion
- Disable test_regular_as_delaunay_3 since remove is not ready yet.

7 November 2004 Sylvain Pion
- Regular::insert() : discard point when same xyz coordinates and
  same weight as an existing vertex.

6 November 2004 Sylvain Pion
- Add move_point() to Regular_3 (not documented because not tested yet).
- Add test-suite program test_regular_as_delaunay_3.

27 September 2004 Sylvain Pion
- Rename Triangulation_cell_base_with_hidden_points_3 into
  Regular_triangulation_cell_base_3.

20 September 2004 Andreas Fabri
- Made derivation in Regular_triangulation_euclidean_traits_3 public
- Add a short name macro for Regular_triangulation_filtered_traits_3.

15 September 2004 Sylvain Pion
- Remove unused code to please g++ 2.95.

14 September 2004 Sylvain Pion
- Specialize Regular_traits_3<> for Exact_pred_inexact_const_kernel, so that
  it becomes automatically the filtered traits (and thus gets better backward
  compat).

13 September 2004 Sylvain Pion
- Regular traits : make functor classes parameterized by K (meant to be the
  regular traits, or the kernel when WPs will be there).
- Add Regular_triangulation_filtered_traits_3.

7 September 2004 Sylvain Pion
- Regular_triangulation_3 now fetches "Weighted_point_3" instead of
  "Weighted_point" from the traits (which still exports both for backward
  compat reasons).
- Traits functors fixes :
  - added Arity typedef and result_type
  - make functors const, and pass references instead of values.
