@@ -562,7 +562,7 @@ Facet start) const;}
 Cell_handle start, int f) const;}
 {As above for edge \ccc{(i,j)} of \ccc{c} and facet \ccc{(start,f)}.} 
 
-\ccHeading{Traversal of the incident cells and the
+\ccHeading{Traversal of the incident cells and facets, and the
 adjacent vertices of a given vertex}
 
 \ccThree{void_circulator}{tds.facets_begin()toto}{}
@@ -575,6 +575,14 @@ incident to \ccc{v} to the output iterator \ccc{cells}.
 If \ccVar.\ccc{dimension()} $<2$, then do nothing.
 Returns the resulting output iterator.
 \ccPrecond{\ccc{v} $\neq$ \ccc{Vertex_handle()}, \ccVar.\ccc{is_vertex(v)}.}}
+
+\ccMethod{template <class OutputIterator>
+          OutputIterator
+          incident_facets(Vertex_handle v, OutputIterator facets) const;}
+{Copies the \ccc{Facet}s incident to \ccc{v} to the output iterator
+\ccc{facets}.
+Returns the resulting output iterator.
+\ccPrecond{\ccVar.\ccc{dimension()} $=3$, \ccc{v} $\neq$ \ccc{Vertex_handle()}, \ccVar.\ccc{is_vertex(v)}.}}
 
 \ccMethod{template <class OutputIterator>
           OutputIterator
