@@ -1,3 +1,6 @@
+14 January 2005 Sylvain Pion
+- Added incident_facets(Vertex_handle).
+
 07 January 2005 Sylvain Pion
 - Doc : missing \\
 
